@@ -1,6 +1,6 @@
-AC_INIT([transmission],[1.21Z],[http://trac.transmissionbt.com/newticket])
-PEERID_PREFIX="-TR121Z-"
-USERAGENT_PREFIX="1.21+"
+AC_INIT([transmission],[1.22Z],[http://trac.transmissionbt.com/newticket])
+PEERID_PREFIX="-TR122Z-"
+USERAGENT_PREFIX="1.22+"
 AC_SUBST(PEERID_PREFIX,[$PEERID_PREFIX])
 AC_SUBST(USERAGENT_PREFIX,[$USERAGENT_PREFIX])
 
